# dcppn

./: 404.html  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  teste
.devcontainer/: devcontainer.json
.github/: atualizar.yml
2025/:     2025-04-09_inteligencia-3633.md  2025-04-09_dea-ferias-premio
arquivos/: Tabelas_orcamentarias 25_09_2025 (1).xlsx
atos/142/: index.html
atos/143/: index.html
classificador-dcppn/: index.html
docs/: classificador-dcppn.md  index.md  painel.md  ultimas-atualizacoes.md
docs/arquivos/: Classificador 25-09-2025.docx
docs/stylesheets/: extra.css
painel/: index.html
search/: search_index.json
site/: 142.md  143.md  404.html  index.html  sitemap.xml  ultimas-atualizacoes.md
site/atos/142/: index.html
site/atos/143/: index.html
site/classificador-dcppn/: index.html
site/painel/: index.html
site/search/: search_index.json
site/ultimas-atualizacoes/: index.html
stylesheets/: extra.css
ultimas-atualizacoes/: index.html
